Your Choice WOD
My attempt at recreating the smosh store for the your choice WOD.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Your Choice</title>
 </head>
 <body>
-<div class="ui top borderless menu">
+<div class="ui fixed top borderless menu">
   <div class="fitted text menu item" id="shop-link"><a href="#">SHOP</a></div>
   <div class="ui centered image item"><a href="#"><img
       src="//cdn.shopify.com/s/files/1/0045/3017/6086/files/smsc-logo-01_120x.png?v=1569269015" id="smosh-logo"
@@ -84,9 +84,9 @@
 </div>
 <hr/>
 
-<div class="ui two column grid">
+<div class="ui two column centered grid">
   <div class="column">
-    <h3 class="ui column header"><a href="#">FOOTER MENU</a></h3>
+    <h3 class="ui column header">FOOTER MENU</h3>
     <div class="column item"><a href="#">Sizing Chart</a></div>
     <div class="column item"><a href="#">Contact Us</a></div>
     <div class="column item"><a href="#">FAQ</a></div>
@@ -105,7 +105,7 @@
 </div>
 
 <a href="#">
-  <button class="ui left floated black button"><i class="wheelchair icon"></i></button>
+  <button class="ui bottom attached left floated black button"><i class="wheelchair icon"></i></button>
 </a>
 <a href="#">
   <button class="ui right floated black button"><i class="envelope icon"></i>Help</button>
