Your Choice WOD
Tried to fix columns and buttons

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <hr/>
 
-<div class="ui two column centered grid">
+<div class="ui four column centered grid">
   <div class="column">
     <h3 class="ui column header">FOOTER MENU</h3>
     <div class="column item"><a href="#">Sizing Chart</a></div>
@@ -98,17 +98,18 @@
     <div class="ui labeled input item">
       <input type="text" placeholder="Enter your email address">
     </div>
-    <div class="ui black button item">
+    <div class="ui black label">
       SUBSCRIBE
     </div>
   </div>
 </div>
-
-<a href="#">
-  <button class="ui bottom attached left floated black button"><i class="wheelchair icon"></i></button>
-</a>
-<a href="#">
-  <button class="ui right floated black button"><i class="envelope icon"></i>Help</button>
-</a>
+<div class="buttons">
+  <a href="#">
+    <button class="ui left black button"><i class="wheelchair icon"></i></button>
+  </a>
+  <a href="#">
+    <button class="ui right black button"><i class="envelope icon"></i>Help</button>
+  </a>
+</div>
 </body>
 </html>
