--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="ui shop container">
       <div class="item">
         <a href="#"><img class="ui large image"
-                         src=" https://cdn.shopify.com/s/files/1/0045/3017/6086/products/SlushcultxSmosh-3146_1_1000x.jpg?v=1569366610"></a>
+                         src="https://cdn.shopify.com/s/files/1/0045/3017/6086/products/SlushcultxSmosh-3146_1_1000x.jpg?v=1569366610"></a>
       </div>
       <div class="shop header item"><a href="#">SMOSH X SLUSHCULT HAT</a></div>
       <div class="price item">$24.99</div>
@@ -90,7 +90,7 @@
     <div class="column item"><a href="#">Sizing Chart</a></div>
     <div class="column item"><a href="#">Contact Us</a></div>
     <div class="column item"><a href="#">FAQ</a></div>
-    <div class="column item"><a href="#">Accesibility</a></div>
+    <div class="column item"><a href="#">Accessibility</a></div>
   </div>
   <div class="column">
     <h3 class="ui column header">NEWSLETTER</h3>
